--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Giphy Party</title>
     <link rel="stylesheet" type="text/css" href="./index.css">
     <link href="https://fonts.cdnfonts.com/css/genera-grotesk" rel="stylesheet">
                 
